# pyms-django-chassis

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/workflows/: ci.yml  release.yml
pyms_django/: __init__.py  admin.py  asgi.py  decorators.py  fields.py  filters.py  filtersets.py  forms.py  hooks.py  models.py  routers.py  serializers.py  trace_context.py  urls.py  utils.py  views.py  wsgi.py
pyms_django/base/: __init__.py  apps.py
pyms_django/base/management/: __init__.py
pyms_django/base/management/commands/: __init__.py  folderddd.py
pyms_django/cli/: __init__.py  startproject.py  tui.py  types.py
pyms_django/cloud/: __init__.py  resources.py
pyms_django/cloud/aws/: __init__.py  secret_manager.py
pyms_django/data_type/: __init__.py  custom_router.py  settings_type.py
pyms_django/db/: __init__.py  database_routers.py  functions.py  migrations.py  set_tenant_utils.py  utils.py
pyms_django/db/backends/: __init__.py
pyms_django/db/backends/fix_spatial/: __init__.py  base.py
pyms_django/exceptions/: __init__.py  domain.py
pyms_django/formatters/: __init__.py  logging.py
pyms_django/handlers/: __init__.py  errors.py  version.py
pyms_django/middlewares/: __init__.py  logging.py  tracing.py
pyms_django/oas/: __init__.py  parameters.py  responses.py
pyms_django/pydantic/: __init__.py  models.py
pyms_django/settings/: __init__.py  apps.py  config_vars.py  main.py  metrics.py  middlewares.py  unit_tests.py
pyms_django/templates/admin/: migrate_data_to_other_tenant.html
pyms_django/tenants/: __init__.py  admin.py  apps.py  models.py
pyms_django/tenants/migrations/: 0001_initial.py  __init__.py
tests/: __init__.py  conftest.py  settings.py  test_exceptions.py  test_middlewares.py  test_models.py  test_serializers.py  test_utils.py  test_views.py
tests/cli/: test_startproject.py
tests/db/: test_database_routers.py  test_utils.py
tests/exceptions/: test_domain.py
tests/formatters/: test_logging.py
tests/handlers/: test_errors.py
tests/middlewares/: test_logging.py  test_tracing.py
tests/oas/: test_parameters.py  test_responses.py
